# trading-scanner

./: .env.example  .gitignore  CLAUDE.md  README.md  actualizar.bat  iniciar.bat  pyproject.toml  server_err.txt  server_out.txt  setup.bat  test_manual_data.py  uvicorn_err.txt  uvicorn_out.txt
docs/schwab-api/: RESUMEN.md
input/: scan_20260701.csv  scan_20260708.csv  scan_20260713.csv  scan_20260714.csv  scan_20260715.csv  scan_20260716.csv
src/trading_scanner/: cli_precarga.py  config.py  database.py  main.py  models.py  pipeline.py
src/trading_scanner/api/: backtest.py  config.py  optimize.py  scan.py  schwab.py  settings.py  stream.py  ticker.py
src/trading_scanner/backtest/: metrics.py  runner.py  simulator.py
src/trading_scanner/engine/: criteria.py  evaluator.py  signals.py
src/trading_scanner/fetchers/: calendar_client.py  history_cache.py  market_data_cache.py  mock_schwab.py  schwab_client.py  (+3 more)
templates/: backtest.html  base.html  config.html  dashboard.html  history.html  optimize.html  schwab_connect.html  settings.html  ticker_detail.html
templates/partials/: optimize_status.html  optimizer_badge.html  scan_table.html  stream_badge.html
tests/fixtures/: sample_scan.csv
tests/unit/: run_indicators_tests.py  test_config_validation.py  test_csv_parser.py  test_evaluator.py  test_fitness.py  test_history_cache_introspeccion.py  test_indicators.py  test_market_data_cache.py  test_metrics_estrategia.py  test_optimizer_study.py  test_optimizer_universo.py  test_schwab_history_negativo.py  test_schwab_stream.py  test_search_space.py
(+11 files in other folders)
