[project]
name = "trading-scanner"
version = "0.1.0"
description = "Sistema de scanning diario de acciones del mercado estadounidense"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "polars>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "schwab-py>=0.5.0",
    "watchdog>=3.0.0",
    "pandas>=2.1.0",
    "pandas-ta>=0.3.0",
    "optuna>=3.14.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pytest>=7.4.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "pyarrow>=24.0.0",
]

[project.scripts]
trading-scanner-optimize = "trading_scanner.optimizer.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: pruebas unitarias puras — sin red, sin archivos",
    "integration: requieren Schwab sandbox o Turso test",
    "slow: backtesting completo — ejecutar manualmente",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
